--- a/problem-sets/ps4/Uebungsblatt_4.Rmd
+++ b/problem-sets/ps4/Uebungsblatt_4.Rmd
@@ -32,11 +32,7 @@ Sollten Sie so beantworten, dass Sie die `___` Abschnitte befuellen und das `#__
 
 Beginnen sie indem Sie oben Ihren Name in das Feld user.name eingeben.
 
-```{r}
-k<-c(0.01,0.05)
-x<-c(100)
-x/k
-```
+
 
 ## Exercise 1 -- Einfache lineare Zusammenhaenge
 
@@ -51,10 +47,12 @@ library(stargazer)
 a) Im ersten Schritt laden wir die zur Verfuegung stehenden Daten. Laden Sie die unter Daten bereitgestellten `EU_Makro.csv` Daten in R.
 
 ```{r "1_a"}
-____ <- read_csv("____")
-
+library(tidyverse)
+eu_makro <- read_csv("./data/EU_Makro.csv")
 # enter your code here ...
 
+install.packages("RTutor",repos = c("https://skranz-repo.github.io/drat/",getOption("repos"))) # Problem Sets
+library(RTutor)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -80,11 +78,8 @@ Auf den ersten Blick ist zu erkennen, das ein positiver Zusammenhang zwischen de
 b) Eine beliebte Methode einen Zusammenhang in einer einzelnen Zahl zusammenzufassen ist eine einfache lineare Regression mittels der Methode der kleinsten Quadrate (engl. Ordinary Least Squares OLS). Regressieren Sie in R `unempl` auf `debt_share_country_pro`. Speichern Sie das Ergebnis in der Variablen `reg1` und zeigen Sie dann eine Zusammenfassung von `reg1`. Bitte kommentieren Sie hierfuer den Code aus und ergaenzen Sie diesen: 
 
 ```{r "1_b"}
-reg1 <- lm(___~debt_share_country_pro, data=___)
-summary(___)
-
-# enter your code here ...
-
+reg1 <- lm(unempl~debt_share_country_pro, data=eu_makro)
+summary(reg1)
 
 # enter your code here ...
 
@@ -109,16 +104,21 @@ Geben Sie hier Ihrer Antwort gerundet auf drei Nachkommastellen ein. Achten Sie 
 
 ```{r "1_c",optional=TRUE}
 
-# enter your code here ...
+c<-summary(reg1)$coefficients[1,1]
+round(c,3)
+
+#Ohne Code:
+6.895
 
 ```
 
 d) Manchmal moechten wir mit den geschaetzten Koeffizienten direkt weiterrechnen. Hierfuer ist die Funktion `coef` nuetzlich. Wenden Sie in einem ersten Schritt die Funktion `coef` auf `reg1` an. Anschliessend speichern Sie bitte den ersten Koeffizienten in der Variable `b0` und den zweiten in der Variable `b1`.
 ```{r "1_d"}
 
-# enter your code here ...
-
-
+coef(reg1)
+b0<-coef(reg1)[1]
+b1<-coef(reg1)[2]
+b0;b1
 # enter your code here ...
 
 ```
@@ -127,7 +127,7 @@ Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 f) Fuegen Sie der Grafik `g1` in "blue" eine Linie mit der in `reg1` berechneten Regressionsgerade hinzu. Speichern Sie diese Grafik als `g2` und lassen Sie sich diese anschliessend anzeigen. Bitte fuellen Sie hierzu die Luecken aus:
 
 ```{r "1_f"}
-g2 <- g1 + geom_abline(intercept=___,slope=___,colour="___")
+g2 <- g1 + geom_abline(intercept=b0,slope=b1,colour="blue")
 
 # enter your code here ...
 
@@ -139,6 +139,7 @@ g) In einer einfachen linearen Regression von `y` auf `x`, hat der geschaetzte K
 
 ```{r "1_g",optional=TRUE}
 
+cor(eu_makro$umepl,eu_makro$debt_share_country_pro)
 # enter your code here ...
 
 ```
